force-app/main/default/objects/GoTo_Session_Question__c/GoTo_Session_Question__c.object-meta.xml
<CustomObject>
    <label>GoTo Session Question</label>
    <nameField>
        <displayFormat>QA-{0000000}</displayFormat>
        <label>GoToSession</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GoTo Session Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>