force-app/main/default/objects/GoTo_Session_Question__c/fields/Answerer_Email__c.field-meta.xml
<CustomField>
    <fullName>Answerer_Email__c</fullName>
    <label>Answerer Email</label>
    <type>Email</type>
</CustomField>