force-app/main/default/objects/GoTo_Session_Question__c/fields/Asked_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Asked_By_Email__c</fullName>
    <label>Asked By Email</label>
    <type>Email</type>
</CustomField>