force-app/main/default/objects/GoTo_Session_Question__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GoTo Session Questions</relationshipLabel>
    <relationshipName>GoTo_Session_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>