force-app/main/default/objects/GoTo_Session_Question__c/fields/Date_Asked__c.field-meta.xml
<CustomField>
    <fullName>Date_Asked__c</fullName>
    <label>Date Asked</label>
    <type>DateTime</type>
</CustomField>