force-app/main/default/objects/GoTo_Session_Question__c/fields/GoTo_Session__c.field-meta.xml
<CustomField>
    <fullName>GoTo_Session__c</fullName>
    <label>GoTo Session</label>
    <referenceTo>GoTo_Session__c</referenceTo>
    <relationshipLabel>GoTo Session Questions</relationshipLabel>
    <relationshipName>GoTo_Session_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>