force-app/main/default/objects/GoTo_Session_Question__c/fields/Question_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Question_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Question External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>